fe-v1-wasm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  selector:
    matchLabels:
      app: myapp
      version: v1   
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
      annotations:
        sidecar.istio.io/userVolume: '[{"name":"wasmfilters-dir","configMap": {"name": "example-filter"}}]'
        sidecar.istio.io/userVolumeMount: '[{"mountPath":"/var/local/lib/wasm-filters","name":"wasmfilters-dir"}]'        
    spec:
      serviceAccountName: myapp-sa
      containers:
      - name: myapp-container
        image: salrashid123/istioinit:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
