all-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: myapp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      serviceAccountName: myapp-sa
      containers:
      - name: myapp-container
        image: salrashid123/istioinit:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080        
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp-container
        image: salrashid123/istioinit:2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080      
---
apiVersion: v1
kind: Service
metadata:
  name: be
  labels:
    app: be
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: be
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: be-v1
  labels:
    type: be
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: be
        version: v1
    spec:
      serviceAccountName: be-sa
      containers:
      - name: be-container
        image: salrashid123/istioinit:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080        
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: be-v2
  labels:
    type: be
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: be
        version: v2
    spec:
      serviceAccountName: be-sa
      containers:
      - name: be-container
        image: salrashid123/istioinit:2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
