all-gke.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    #kubernetes.io/ingress.class: "istio"
    kubernetes.io/ingress.allowHTTP: "false"
spec:
  tls:
  - secretName: istio-ingress-certs
  rules:
  - http:
      paths:
      #- path: /.*
      - path: /*
        backend:
          serviceName: myapp
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
  selector:
    app: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  selector:
    matchLabels:
      app: myapp
      version: v1  
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - name: myapp-container
        image: salrashid123/istioinit:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  selector:
    matchLabels:
      app: myapp
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp-container
        image: salrashid123/istioinit:2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: be
  labels:
    app: be
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: be
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-v1
  labels:
    type: be
    version: v1
spec:
  selector:
    matchLabels:
      app: be
      version: v1 
  replicas: 1
  template:
    metadata:
      labels:
        app: be
        version: v1
    spec:
      containers:
      - name: be-container
        image: salrashid123/istioinit:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-v2
  labels:
    type: be
    version: v2
spec:
  selector:
    matchLabels:
      app: be
      version: v2  
  replicas: 1
  template:
    metadata:
      labels:
        app: be
        version: v2
    spec:
      containers:
      - name: be-container
        image: salrashid123/istioinit:2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
