fe-v1-wasm-inject.yaml
apiVersion: networking.istio.io/v1
kind: EnvoyFilter
metadata:
  name: ui-examplefilter
  namespace: default
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      proxy:
        proxyVersion: '1\.9.*'      
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.wasm
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              root_id: my_root_id
              vm_config:
                code:
                  local:
                    filename: /var/local/lib/wasm-filters/envoy_filter_http_wasm_example.wasm
                runtime: envoy.wasm.runtime.v8
                allow_precompiled: true
                vm_id: my-example
  workloadSelector:
    labels:
      app: myapp
      version: v1
