istio-fev1-bev2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: myapp-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  - my-gateway-ilb
  http:
  - route:
    - destination:
        host: myapp
        subset: v1
      weight: 100
#    - destination:
#        host: myapp
#        subset: v2
#      weight: 10
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: myapp-destination
spec:
  host: myapp
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
    loadBalancer:
      simple: ROUND_ROBIN      
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2  
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: be-virtualservice
spec:
  gateways:
  - mesh 
  hosts:
  - be
  http:
  - match:
    - sourceLabels:
        app: myapp
        version: v1 
    route:      
    - destination:
        host: be
        subset: v2
      weight: 100
#  - route:
#    - destination:
#        host: be
#    weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: be-destination
spec:
  host: be
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
    loadBalancer:
      simple: ROUND_ROBIN     
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
